--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@plugin "daisyui";
 
 html,body{
     background: radial-gradient(circle, rgba(51,47,47,1) 0%, rgba(17,16,16,1) 80%, rgba(0,0,0,1) 100%);
@@ -13,6 +12,10 @@ h1 {
     font-weight: 700;
     font-size: 3rem;
     color: #f7fafc;
+}
+
+h2{
+    font-size: 2rem;
 }
 
 p {
@@ -48,6 +51,18 @@ input {
     color: #f7fafc;
 }
 
+.font-white{
+    color: #f7fafc;
+}
+
+.font-700{
+    font-weight: 700;
+}
+
+.font-500{
+    font-weight: 500;
+}
+
 /* Card Dashboard*/
 .card-dashboard-title{
     font-size: 2rem;
@@ -72,6 +87,7 @@ input {
 
 .card-dashboard:hover{
     transform: scale(1.1);
+    cursor: pointer;
 }
 
 /* Font styles*/
@@ -131,9 +147,9 @@ input {
     font-style: normal;
 }
 
-@font-face {
-    font-family: 'Rubik';
-    src: url("../../src/assets/fonts/Rubik/Rubik-Medium.woff") format('woff');
-    font-weight: 500;
-    font-style: normal;
-}
+/*@font-face {*/
+/*    font-family: 'Rubik';*/
+/*    src: url("../../src/assets/fonts/Rubik/Rubik-Medium.woff") format('woff');*/
+/*    font-weight: 500;*/
+/*    font-style: normal;*/
+/*}*/
